--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,6 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: about_me
+- file: cv
+- file: analysisexample
